2010-10-12  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Finally removed whitespace from the start of a single word suggestion

2010-10-08  Markus Goldbach  <markus.goldbach@dkd.de>

	* Added missing translations for dutch, credits Bart Gijswijt

2010-10-08  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #10165 - Phrase queries not working as quotes are escaped in Solr queries

2010-10-06  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a missing hook registration resulting in user groups not being tracked and thus making protected results publicly visible
	* Added a marker displaying the result document ID to the default template

2010-10-06  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Removed whitespace from the start of a single word suggestion
	* Fixed issue #9208: autocomplete does not work when choosing term using the mouse, credits Michiel Roos
	* Fixed the path to ui-anim_basic_16x16.gif

2010-10-04  Ingo Renner  <ingo.renner@dkd.de>

	* Changed page content extractor to remove javascript tags and their content, credits Markus Kleinhenz

2010-09-30  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a missing class in ext_autoload.php
	* Fixed branch definition for the install script
	* Fixed status report check for current schema.xml

2010-09-29  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v1.2.0

	* Moved the Access Filter Plugin from resources/solr/ to resources/solr/plugins/
	* Updated Access Filter Plugin to version 1.1.0, brings extended access check support
	* Changed the install Solr script to get the access filter from the new location
	* Changed the Access Filter Plugin status report to use Solr's plugin information request handler
	* Updated schema.xml version to "link" it to the 1.5.0 version of the extension
	* Changed schema.xml access field default value to "c:0"
	* Added a report status to check whether the used solrconfig.xml is current